--- a/app/src/main/res/layout/fragment_create_profile.xml
+++ b/app/src/main/res/layout/fragment_create_profile.xml
@@ -11,14 +11,13 @@
         android:id="@+id/imageView2"
         android:layout_width="411dp"
         android:layout_height="172dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="12dp"
         android:background="#00FFFFFF"
         android:src="@drawable/gamericonprofilered"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/emailField"
@@ -97,29 +96,28 @@
 
     <TextView
         android:id="@+id/selectedGamesTextView"
-        android:layout_width="391dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="8dp"
-        android:text="Selected Games:"
+        android:layout_width="181dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="16dp"
+        android:text="Selected Games"
         android:textColor="@color/textColor"
         android:textSize="9.5pt"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gamesAutoComplete" />
 
     <TextView
         android:id="@+id/GamesSelected"
-        android:layout_width="393dp"
-        android:layout_height="97dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="336dp"
+        android:layout_height="173dp"
+        android:layout_marginTop="4dp"
         android:text=""
         android:textColor="@color/textColor"
         android:textSize="8pt"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/selectedGamesTextView" />
 
@@ -127,12 +125,11 @@
         android:id="@+id/DeleteButton"
         android:layout_width="44dp"
         android:layout_height="47dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="-50dp"
         android:contentDescription="Delete last game"
         android:src="@android:drawable/ic_delete"
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/GamesSelected" />
 
@@ -142,17 +139,17 @@
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/buttondesign"
         android:backgroundTint="@null"
         android:text="Register"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:background="@drawable/buttondesign"
-        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DeleteButton"
-        app:layout_constraintVertical_bias="0.923" />
+        app:layout_constraintVertical_bias="0.9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
