--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -68,7 +68,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="106dp"
-            android:orientation="horizontal"></LinearLayout>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/forgotPasswordText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forgot your password?"
+                android:textStyle="bold"
+                android:textColor="@color/textColor"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:textSize="14sp" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 </FrameLayout>
